bk_ida/gobmkida/g1/show_dragons
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/show_dragons/src/engine/dragon.c:1949:7: error: use of undeclared identifier 'snames_2'
v26 = snames_2[*( ( int *)v12 + 15)]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/show_dragons/src/engine/dragon.c:1950:7: error: use of undeclared identifier 'snames_2'
v15 = snames_2[*( ( int *)v12 + 4)]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/show_dragons/src/engine/dragon.c:1971:31: error: use of undeclared identifier 'snames_2'
gprintf( ", owl status %s\n", snames_2[*( ( int *)v12 + 6)]); 
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/show_dragons/src/obj/1/dragon.o] Error 1
